# PID-controller-fuzzy

./: CMakeLists.txt  Dockerfile  README.md  build.sh
inc/: logs.h  pid.h
src/: CMakeLists.txt  pid.c
tests/: CMakeLists.txt  test_pid.c
